<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.hrick.estoquepessoal.view.RegisterStockActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llFormStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_form"
            android:orientation="vertical"
            android:paddingBottom="@dimen/button_height">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditTextCustom"
                    android:hint="@string/promp_name"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditTextCustom"
                    android:hint="@string/prompt_brand"
                    android:inputType="textCapSentences" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilResponsibleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditTextCustom"
                    android:hint="@string/prompt_responsible_number"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <CheckBox

                android:id="@+id/cbUseResposibleNumberStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/same_responsible_number_stock" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    style="@style/EditTextCustom"
                    android:hint="@string/quantity"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btRegister"
        style="@style/ButtonRegister" />
</RelativeLayout>
