<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context="br.com.hrick.estoquepessoal.view.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            style="@style/ImageViewLogo"
            android:contentDescription="@string/description_application_logo"
            android:src="@drawable/estoque_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDeveloperName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer_name" />

        <TextView
            android:id="@+id/tvVersion"
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Versão do aplicativo: 5.0" />
    </LinearLayout>
</RelativeLayout>

    <!--//    Esse aplicativo serve para fazer o controle de todos tipo de estoque, como por exemplo: controle do estoque de alimentação, estoque de ferramentas e entre outros-->
